Change documentation related to ZGC.  Talk more about NUMA.